--- a/Lab1FirstGoogleNotebook.ipynb
+++ b/Lab1FirstGoogleNotebook.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Lab1FirstGoogleNotebook.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMKWPvFv9qrPS1mXlwolw+E",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPrmMhTfn0U1QtSfEM+1hGV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +42,7 @@
         "colab_type": "text"
       },
       "source": [
-        "I think that Jupyter Notebooks is interesting idea and I have never experienced anything quite like it.  I am looking forward to using it and seeing what kind of things are possible with it"
+        "I think that Jupyter Notebooks is interesting idea and I have never experienced anything quite like it.  I am looking forward to using it and seeing what kind of things are possible with it."
       ]
     },
     {
