--- a/Lab1FirstGoogleNotebook.ipynb
+++ b/Lab1FirstGoogleNotebook.ipynb
@@ -6,7 +6,7 @@
       "name": "Lab1FirstGoogleNotebook.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPrmMhTfn0U1QtSfEM+1hGV",
+      "authorship_tag": "ABX9TyNx0HXIcwCYCkB63Zpty/np",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -72,7 +72,7 @@
         "colab_type": "text"
       },
       "source": [
-        "![abstractart](https://raw.githubusercontent.com/nfedornock/Lab1/master/images/abstractart.jpg) Just found a cool piece of art online"
+        "![abstractart](https://raw.githubusercontent.com/nfedornock/Lab1/master/images/abstractart.jpg) Just found a cool piece of art online."
       ]
     }
   ]
